--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ body {
   }
   
   button {
-    margin-top: 30px;
+    margin-top: 10px;
     border: none;
     background-color: #1E95EA;
     color: white;
@@ -86,4 +86,8 @@ body {
   .activeTab {
     color: #16C0B0;
     text-decoration: underline;
+  }
+
+  .outOfStock {
+    text-decoration: line-through;
   }
